# IHLT

./: Lab03_Santiago_del_Rey_Juarez_Nikita_Belooussov.ipynb  Lab04_Santiago_del_Rey_Juarez_Nikita_Belooussov.ipynb  Lab05_Santiago_del_Rey_Juarez_Nikita_Belooussov.ipynb  Lab1NB.ipynb  Nikita_Belooussov_Lab1.ipynb  Nikita_Belooussov_Lab2.ipynb  README.md
IHLT_Project/: mlp_regr.joblib  mlp_regr_2.joblib  pyproject.toml  sts_Santiago_del_Rey_Juarez_Nikita_Belooussov.ipynb  svr_regr.joblib
IHLT_Project/.ipynb_checkpoints/: sts_Santiago_del_Rey_Juarez_Nikita_Belooussov-checkpoint.ipynb
