[tool.poetry]
name = "ihlt_project"
version = "0.1.0"
description = ""
authors = ["Santiago del Rey Juárez <santiago.del.rey@estudiantat.upc.edu>, Nikita Belooussov"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
nltk = "^3.6.5"
pandas = "^1.3.4"
numpy = "^1.21.4"
spacy = "^3.2.0"
scipy = "^1.7.2"
seaborn = "^0.11.2"
ipykernel = "^6.5.0"
jupyter = "^1.0.0"
sklearn = "^0.0"
contractions = "^0.0.58"
num2words = "^0.5.10"

[tool.poetry.dev-dependencies]
pip = "^21.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
